syntax = "proto3";

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "AElf.Contracts.BingoGameContract";

service BingoGameContract {
    option (aelf.csharp_state) = "AElf.Contracts.BingoGameContract.BingoGameContractState";
    
    // Actions
    rpc Initial (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }
    rpc Register (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }
    rpc Deposit (aelf.SInt64Value) returns (google.protobuf.Empty) {
    }
    rpc Play (aelf.SInt64Value) returns (aelf.SInt64Value) {
    }
    rpc Bingo (aelf.Hash) returns (google.protobuf.BoolValue) {
    }
    rpc Quit (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }
    
    // Views
    rpc GetAward (aelf.Hash) returns (aelf.SInt64Value) {
        option (aelf.is_view) = true;
    }
    rpc GetPlayerInformation (aelf.Address) returns (PlayerInformation) {
        option (aelf.is_view) = true;
    }
}

message PlayerInformation {  // 玩家信息
    aelf.Hash seed = 1;
    repeated BoutInformation bouts = 2;  // repeated就是可以有好几个，能往里面加
}

message BoutInformation {  // 一次下注（一个回合）的游戏信息
    sint64 play_round_number = 1;  //  这是第几个回合
    sint64 amount = 2;  // 下注多少
    sint64 award = 3;  // 奖金多少
    bool is_complete = 4;  // 该回合是否结束
    aelf.Hash play_id = 5;  // 玩游戏的那个hash
    sint64 bingo_round_number = 6;  // 本回合已经Bingo几次
}